--- a/views/models/index.ejs
+++ b/views/models/index.ejs
@@ -7,7 +7,7 @@
 <body>
   <h1><a href="/all">all tables</a></h1>
   <h2><a href="/<%= table.name %>"><%= table.name %></a></h1>
-  <h3><a href="/<%= table.name %>/new">Create New</a></h3>
+  <h3><a href="/<%= table.name %>/new">create new</a></h3>
   <hr>
   <% items.forEach(function(item) { %>
     <% for (var key in item) { %>
