--- a/views/tables/edit.ejs
+++ b/views/tables/edit.ejs
@@ -5,13 +5,14 @@
   <title>Document</title>
 </head>
 <body>
-  <h1><a href="/all">all tables</a></h1>
-  <h2><a href="/<%= table.name %>"><%= table.name %></a></h1>
+  <p><a href="/logout">logout</a></p>
+  <h1><a href="/tables">all tables</a></h1>
+  <h2><a href="/tables/<%= table.name %>"><%= table.name %></a></h1>
   <% items.forEach(function(item) { %>
-    <h3><a href="/<%= table.name %>/<%= item.id %>">Back</a></h3>
+    <h3><a href="/tables/<%= table.name %>/<%= item.id %>">Back</a></h3>
     <hr>
     <p>id: <%= item.id %></p>
-    <form action="/<%= table.name %>/<%= item.id %>" method="post">
+    <form action="/tables/<%= table.name %>/<%= item.id %>" method="post">
       <input type="hidden" name="_method" value="put">
       <input type="hidden" name="id" value="<%= item.id %>">
       <% for (var key in item) { %>
@@ -23,7 +24,7 @@
       <% } %>
       <button>Update</button>
     </form>
-    <form action="/<%= table.name %>/<%= item.id %>" method="post">
+    <form action="/tables/<%= table.name %>/<%= item.id %>" method="post">
       <input type="hidden" name="_method" value="delete">
       <button>Delete</button>
     </form>
