--- a/views/signin.ejs
+++ b/views/signin.ejs
@@ -30,7 +30,9 @@
     </form>
 
     <br>
-    <a class="check" href="/"><button class="btn btn-success btn-lg">Check</button></a>
+    <a class="check" href="/getinfo"><button class="btn btn-success btn-lg">Check</button></a>
+    <br><br>
+    <a class="delete" href="/tables/venues"><button class="btn btn-primary btn-lg">Delete</button></a>
 
 </div>
 
