added JWT test page

--- a/views/signin.ejs
+++ b/views/signin.ejs
@@ -13,7 +13,7 @@
 
 <div class="col-sm-6 col-sm-offset-3">
 
-    <h1><span class="fa fa-sign-in"></span> Login</h1>
+    <h1><span class="fa fa-sign-in"></span> JWT Signin</h1>
 
     <!-- LOGIN FORM -->
     <form action="/login" method="post">
@@ -32,7 +32,7 @@
     <br>
     <a class="check" href="/getinfo"><button class="btn btn-success btn-lg">Check</button></a>
     <br><br>
-    <a class="delete" href="/tables/venues"><button class="btn btn-primary btn-lg">Delete</button></a>
+    <a class="delete" href="/tables/venues"><button class="btn btn-primary btn-lg">Create</button></a>
 
 </div>
 
