added some extra funcitions in jwt signin page

--- a/views/signin.ejs
+++ b/views/signin.ejs
@@ -1,7 +1,7 @@
-<!doctype html>
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-    <title>Node Authentication</title>
+    <title>Document</title>
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css"> <!-- load bootstrap css -->
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css"> <!-- load fontawesome -->
     <style>
@@ -26,13 +26,15 @@
             <input type="password" class="form-control" name="password">
         </div>
 
-        <button type="submit" class="btn btn-warning btn-lg">Login</button>
+        <button type="submit" class="btn btn-warning btn-lg">Signin</button>
     </form>
 
     <br>
-    <a class="check" href="/getinfo"><button class="btn btn-success btn-lg">Check</button></a>
+    <button class="signout btn btn-danger btn-lg">Signout</button>
     <br><br>
-    <a class="delete" href="/tables/venues"><button class="btn btn-primary btn-lg">Create</button></a>
+    <button class="check btn btn-success btn-lg">Check</button>
+    <br><br>
+    <button class="create btn btn-primary btn-lg">Create</button>
 
 </div>
 
